--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,11 @@
 {
-  "name": "college-guide-backend",
+  "name": "college-guide-frontend",
   "version": "1.0.0",
-  "description": "Backend for College Guide application",
-  "main": "server.js",
+  "description": "Frontend for College Guide application",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "build": "echo 'No build required'"
   },
   "keywords": ["college", "guide", "education"],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express-validator": "^7.0.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.1"
-  }
+  "license": "ISC"
 }
