--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,11 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["college", "guide", "education"],
+  "keywords": [
+    "college",
+    "guide",
+    "education"
+  ],
   "author": "",
   "license": "ISC",
   "engines": {
@@ -21,7 +25,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express-validator": "^7.0.1",
-    "openai": "^6.7.0"
+    "@google/generative-ai": "^0.1.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
