feat: add initial backend environment variables for port, database, JWT, and Gemini API.

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=3000
-MONGODB_URI=mongodb://localhost:27017/college-guide
+MONGODB_URI=mongodb+srv://vikashbhandari367:5Vikash~12@collegeguide.kj0brla.mongodb.net/?appName=collegeguide
 JWT_SECRET=your_jwt_secret_key_here
 GEMINI_API_KEY=AIzaSyD6_PBKnFq1Cukg8eaoPI2nuMhlOGnlvQ0
